[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ait"
version = "0.1.0"
description = "A set of tools for easily interacting with LLMs."
readme = "README.md"
authors = [
    { name = "@paulomtts", email = "paulomtts@outlook.com" }
]
urls = { "Homepage" = "https://github.com/paulomtts/ait.git" }
license = { text = "MIT" }
keywords = ["ai", "agents", "llm", "workflows"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

requires-python = ">=3.13"
dependencies = [
    "build>=1.3.0",
    "grafo>=0.2.36",
    "instructor>=1.11.2",
    "pyyaml>=6.0.2",
]
